ESP8266 + jerry build/flash test.

--- a/targets/esp8266/source/Makefile
+++ b/targets/esp8266/source/Makefile
@@ -12,7 +12,8 @@
 #     a generated lib/image xxx.a ()
 #
 ifndef PDIR
-GEN_LIBS = libuser.a
+UP_EXTRACT_DIR = ..
+GEN_LIBS = libsource.a
 endif
 
 
