--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ matrix:
       env:
         - OPTS="--check-signed-off=travis --check-cppcheck --check-doxygen --check-vera --check-license --check-magic-strings --check-pylint"
       install: pip install --user pylint==1.6.5
+      script: travis_wait 30 tools/run-tests.py $OPTS
       addons:
         apt:
           packages: [doxygen, cppcheck, vera++]
