--- a/jerry-core/CMakeLists.txt
+++ b/jerry-core/CMakeLists.txt
@@ -236,4 +236,8 @@ endif()
 target_compile_definitions(jerry-port-default PUBLIC ${DEFINES_JERRY} -D_BSD_SOURCE -D_DEFAULT_SOURCE)
 target_include_directories(jerry-port-default PUBLIC ${INCLUDE_CORE})
 
-add_library(jerry-ext ALIAS jerry-libc)
+if (NOT JERRY_LIBC)
+  add_library(jerry-ext ALIAS jerry-libm)
+else()
+  add_library(jerry-ext ALIAS jerry-libc)
+endif()
