--- a/jerry-main/CMakeLists.txt
+++ b/jerry-main/CMakeLists.txt
@@ -46,7 +46,7 @@ set(DEFINES_JERRY ${DEFINES_JERRY}) # JERRY_COMMIT_HASH="${JERRY_COMMIT_HASH}")
 macro(jerry_create_executable JERRY_NAME)
   add_executable(${JERRY_NAME} ${ARGN})
   set_property(TARGET ${JERRY_NAME}
-               PROPERTY LINK_FLAGS "-static ${LINKER_FLAGS_COMMON}")
+               PROPERTY LINK_FLAGS "${LINKER_FLAGS_COMMON}")
   target_compile_definitions(${JERRY_NAME} PRIVATE ${DEFINES_JERRY})
 
   target_link_libraries(${JERRY_NAME} jerry-core)
