--- a/jerry-core/CMakeLists.txt
+++ b/jerry-core/CMakeLists.txt
@@ -43,6 +43,8 @@ set(JERRY_GC_LIMIT                  "(0)"   CACHE STRING "Heap usage limit to tr
 set(JERRY_STACK_LIMIT               "(0)"   CACHE STRING "Maximum stack usage size, in kilobytes")
 set(JERRY_GC_MARK_LIMIT             "(8)"   CACHE STRING "Maximum depth of recursion during GC mark phase")
 
+set(JERRY_PROFILE "es2015-subset")
+
 # Option overrides
 if(USING_MSVC)
   set(ENABLE_ALL_IN_ONE ON) # FIXME: This should not be needed but right now it is. To be tracked down and followed up.
